--- a/web-app/css/global.css
+++ b/web-app/css/global.css
@@ -30,3 +30,27 @@ body {
   padding-left: 4px;
 }
 
+/*
+ * d3.js Graph
+ */
+
+svg {
+  font: 10px sans-serif;
+}
+
+path {
+  fill: steelblue;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.brush .extent {
+  stroke: #fff;
+  fill-opacity: .125;
+  shape-rendering: crispEdges;
+}
