--- a/web-app/css/global.css
+++ b/web-app/css/global.css
@@ -4,6 +4,7 @@
 
 body {
   padding-top: 90px;
+	background-color:#d74614;		
 }
 
 .gravatar {
@@ -57,4 +58,18 @@ path {
   stroke: #fff;
   fill-opacity: .125;
   shape-rendering: crispEdges;
+}
+
+.login-logo {
+	padding-top:100px;
+	text-align:center;	
+}
+
+.content {
+	background-color:white;
+	position:absolute;
+	top:0; 
+	left:0;
+	width:100%;
+	height:100%;		
 }
