--- a/web-app/css/global.css
+++ b/web-app/css/global.css
@@ -1,10 +1,30 @@
 /*
  * Global styles
  */
+@font-face { font-family: "Quicksand_Book"; src: url(../fonts/Quicksand_Book.otf);     }
+@font-face { font-family: "Quicksand_Bold"; src: url(../fonts/Quicksand_Bold.otf);     }
+@font-face { font-family: "Quicksand_Light"; src: url(../fonts/Quicksand_Light.otf);     }
+@font-face { font-family: "Adamas-Regular"; src: url(../fonts/Adamas-Regular.otf);     }
+
+.quicksand-book {
+	font-family: "Quicksand_Book";	
+}
+
+.quicksand-bold {
+	font-family: "Quicksand_Bold";	
+}
+
+.quicksand-light {
+	font-family: "Quicksand_Light";	
+}
+
+.adamas {
+	font-family: "Adamas-Regular";	
+}
+
 
 body {
   padding-top: 90px;
-	background-color:#d74614;		
 }
 
 .gravatar {
@@ -60,16 +80,61 @@ path {
   shape-rendering: crispEdges;
 }
 
-.login-logo {
-	padding-top:100px;
-	text-align:center;	
-}
-
-.content {
+.login-page {
 	background-color:white;
 	position:absolute;
 	top:0; 
 	left:0;
 	width:100%;
 	height:100%;		
+}
+
+.login-text {
+	position:absolute;
+	top:49%; 
+	left:20%;
+}
+
+.login-button {
+	position:absolute;
+	top:50%; 
+	left:56%;
+}
+
+.login-text-small {
+	font-family: "Quicksand_Light";	
+	font-size:18px;	
+	line-height:20px;
+	color:white;
+}
+
+.login-text-large {
+	font-family: "Quicksand_Book";	
+	font-size:24px;
+	line-height:40px;
+	color:white;
+}
+
+.login-bg {
+	position:absolute;
+	top:42%; 
+	left:15%;
+	background-color:#222222;
+    opacity:0.4;
+    width:70%;
+    height:24%;	
+}
+
+.login-nav {
+	width:100%;
+	text-align:center;
+	padding:2px 0 0 0;
+}
+
+a.login-logo {
+	font-family: "Adamas-Regular";	
+	color:white;
+	text-decoration:none;
+	text-transform:uppercase;
+	font-size:28px;
 }
